<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Login" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center"
        android:contentDescription="@string/splash_description"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone" />
    <EditText
        android:id="@+id/edit_txt_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button 
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="right"
        />
    <TextView 
        android:id="@+id/txt_nao_e_cadastrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nao_e_cadastrado"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        />
</LinearLayout>
